--- a/platformio.ini
+++ b/platformio.ini
@@ -16,14 +16,14 @@ env_default =
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;     due-5500
-    controllino
+     due-5500
+;    controllino
 ;    stm32
 
 ;build_dir = !sh pioenvs.sh ${platformio.env_default}
 ;libdeps_dir = !sh piolibdeps.sh ${platformio.env_default}
-;build_dir = /tmp/pioenvs
-;libdeps_dir = /tmp/piolibdeps
+build_dir = /tmp/pioenvs
+libdeps_dir = /tmp/piolibdeps
 
 [env:esp32]
 platform = espressif32
@@ -203,6 +203,7 @@ lib_deps =
     DHT sensor library
     https://github.com/arcao/Syslog.git
     Streaming
+    https://github.com/livello/PrintEx#is-select-redecl
 
 [env:controllino]
 platform = atmelavr
@@ -228,3 +229,4 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library
     Streaming
+    https://github.com/livello/PrintEx#is-select-redecl
