lib_ignore almost allow keep piolibdeps

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@ env_default =
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
-;    esp32
+    esp32
 ;    megaatmega2560-5500
-     due-5500
+;     due-5500
 ;    controllino
 ;    stm32
 
@@ -29,8 +29,17 @@ libdeps_dir = /tmp/piolibdeps
 platform = espressif32
 framework = arduino
 board = pico32
-lib_ldf_mode = chain+
+;lib_ldf_mode = chain+
 build_flags = !bash check_custom_build_flags_esp32.sh
+lib_ignore =
+    DmxSimple
+    DMXSerial
+    DmxDue
+    DueFlashStorage
+    SD
+    SdFat
+    httpClient
+    ;Ethernet library???
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -46,6 +55,7 @@ lib_deps =
     DHT sensor library for ESPx
     DHT sensor library
     Streaming
+    https://github.com/livello/PrintEx#is-select-redecl
 
 [env:stm32]
 platform = ststm32
@@ -77,8 +87,12 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
-lib_ldf_mode = chain+
 build_flags = !bash check_custom_build_flags_due.sh
+lib_ignore =
+    DHT sensor library for ESPx
+    DMXSerial
+    DmxSimple
+    httpClient
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -105,8 +119,11 @@ platform = atmelavr
 board = megaatmega2560
 ;upload_port = net:192.168.88.31:23
 framework = arduino
-;lib_ldf_mode = chain+
 build_flags = !bash check_custom_build_flags_mega2560.sh
+lib_ignore =
+    DHT sensor library for ESPx
+    DmxDue
+    DueFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -118,6 +135,7 @@ lib_deps =
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
     https://github.com/PaulStoffregen/SPI.git
+    ;TODO: need to rename SPI lib
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED
@@ -131,8 +149,15 @@ lib_deps =
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-lib_ldf_mode = chain+
 build_flags = !bash check_custom_build_flags_esp8266.sh
+lib_ignore =
+    DmxSimple
+    DMXSerial
+    DmxDue
+    DueFlashStorage
+    SD
+    SdFat
+    httpClient
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -157,7 +182,11 @@ board = megaatmega2560
 framework = arduino
 upload_port = net:192.168.88.2:23000
 build_flags = !bash check_custom_build_flags_mega2560-net.sh
-;lib_ldf_mode = chain+
+lib_ignore =
+    DHT sensor library for ESPx
+    DmxDue
+    DueFlashStorage
+    ESP-Dmx
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -182,8 +211,12 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
-;lib_ldf_mode = chain+
 build_flags = !bash check_custom_build_flags_due-5500.sh
+lib_ignore =
+    DHT sensor library for ESPx
+    https://github.com/anklimov/Ethernet
+    ESP-Dmx
+    DMXSerial
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -209,8 +242,12 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-;lib_ldf_mode = chain+
 build_flags = !bash check_custom_build_flags_controllino.sh
+lib_ignore =
+    DHT sensor library for ESPx
+    DmxDue
+    DueFlashStorage
+    ESP-Dmx
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
