lib_ignore all envs except stm32 compiles ok at one time

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,12 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default =
+;env_default =
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
-    esp32
+;    esp32
 ;    megaatmega2560-5500
 ;     due-5500
 ;    controllino
@@ -29,7 +29,6 @@ libdeps_dir = /tmp/piolibdeps
 platform = espressif32
 framework = arduino
 board = pico32
-;lib_ldf_mode = chain+
 build_flags = !bash check_custom_build_flags_esp32.sh
 lib_ignore =
     DmxSimple
@@ -39,11 +38,12 @@ lib_ignore =
     SD
     SdFat
     httpClient
-    ;Ethernet library???
+    WifiManager
+    Ethernet
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
-    ESP8266HTTPClient
+;    ESP8266HTTPClient
     Ethernet3
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
@@ -57,32 +57,6 @@ lib_deps =
     Streaming
     https://github.com/livello/PrintEx#is-select-redecl
 
-[env:stm32]
-platform = ststm32
-framework = arduino
-board = nucleo_f103rb
-upload_protocol = stlink
-debug_tool = stlink
-extra_scripts = pre:!pre_stm32.sh
-;lib_ldf_mode = chain+
-build_flags = !bash check_custom_build_flags_stm32.sh
-lib_deps =
-    DallasTemperature
-    https://github.com/anklimov/aJson
-    https://github.com/anklimov/CmdArduino
-    ArduinoHttpClient
-    https://github.com/anklimov/ModbusMaster
-;    https://github.com/Serasidis/Ethernet_STM.git
-;    https://github.com/livello/Ethernet_STM.git
-    https://github.com/knolleary/pubsubclient.git
-    Adafruit Unified Sensor
-    DHT sensor library
-;    https://github.com/anklimov/DMXSerial
-;    Syslog
-;    https://github.com/No3x/Syslog.git
-    https://github.com/arcao/Syslog.git
-;    UIPEthernet
-
 [env:due]
 platform = atmelsam
 framework = arduino
@@ -93,6 +67,8 @@ lib_ignore =
     DMXSerial
     DmxSimple
     httpClient
+    ESPDMX
+    WifiManager
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -124,6 +100,7 @@ lib_ignore =
     DHT sensor library for ESPx
     DmxDue
     DueFlashStorage
+    WifiManager
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -134,7 +111,7 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-    https://github.com/PaulStoffregen/SPI.git
+;    https://github.com/PaulStoffregen/SPI.git
     ;TODO: need to rename SPI lib
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
@@ -187,6 +164,7 @@ lib_ignore =
     DmxDue
     DueFlashStorage
     ESP-Dmx
+    WifiManager
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -197,7 +175,7 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-    https://github.com/PaulStoffregen/SPI.git
+;    https://github.com/PaulStoffregen/SPI.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED
@@ -217,6 +195,12 @@ lib_ignore =
     https://github.com/anklimov/Ethernet
     ESP-Dmx
     DMXSerial
+    ESPDMX
+    WifiManager
+    DmxSimple
+    httpClient
+    Ethernet
+
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -248,6 +232,7 @@ lib_ignore =
     DmxDue
     DueFlashStorage
     ESP-Dmx
+    WifiManager
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -258,7 +243,7 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-    https://github.com/PaulStoffregen/SPI.git
+;    https://github.com/PaulStoffregen/SPI.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED
@@ -267,3 +252,37 @@ lib_deps =
     DHT sensor library
     Streaming
     https://github.com/livello/PrintEx#is-select-redecl
+
+;TODO:STM32 compilation problems
+;[env:stm32]
+;platform = ststm32
+;framework = arduino
+;board = nucleo_f103rb
+;upload_protocol = stlink
+;debug_tool = stlink
+;build_flags = !bash check_custom_build_flags_stm32.sh
+;lib_ignore =
+;    DHT sensor library for ESPx
+;    DmxDue
+;    DueFlashStorage
+;    ESP-Dmx
+;    WifiManager
+;    FastLED
+;    Ethernet
+;lib_deps =
+;    DallasTemperature
+;    https://github.com/anklimov/aJson
+;    https://github.com/anklimov/CmdArduino
+;    ArduinoHttpClient
+;    https://github.com/anklimov/ModbusMaster
+;;    https://github.com/Serasidis/Ethernet_STM.git
+;;    https://github.com/livello/Ethernet_STM.git
+;    https://github.com/knolleary/pubsubclient.git
+;    Adafruit Unified Sensor
+;    DHT sensor library
+;;    https://github.com/anklimov/DMXSerial
+;;    Syslog
+;;    https://github.com/No3x/Syslog.git
+;    https://github.com/arcao/Syslog.git
+;;    UIPEthernet
+;    Streaming
