--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-;env_default =
-;    megaatmega2560
+env_default =
+    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
