--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default =
-    megaatmega2560
+;env_default =
+;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
@@ -20,10 +20,8 @@ env_default =
 ;    controllino
 ;    stm32
 
-;build_dir = !sh pioenvs.sh ${platformio.env_default}
-;libdeps_dir = !sh piolibdeps.sh ${platformio.env_default}
-build_dir = /tmp/pioenvs
-libdeps_dir = /tmp/piolibdeps
+;build_dir = /tmp/pioenvs
+;libdeps_dir = /tmp/piolibdeps
 
 [env:esp32]
 platform = espressif32
@@ -43,7 +41,6 @@ lib_ignore =
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
-;    ESP8266HTTPClient
     Ethernet3
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
@@ -111,8 +108,6 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-;    https://github.com/PaulStoffregen/SPI.git
-    ;TODO: need to rename SPI lib
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED
@@ -175,7 +170,6 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-;    https://github.com/PaulStoffregen/SPI.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED
@@ -243,7 +237,6 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
-;    https://github.com/PaulStoffregen/SPI.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED
