--- a/platformio.ini
+++ b/platformio.ini
@@ -9,19 +9,19 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-;env_default =
+env_default =
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;     due-5500
+     due-5500
 ;    controllino
 ;    stm32
 
-;build_dir = /tmp/pioenvs
-;libdeps_dir = /tmp/piolibdeps
+build_dir = /tmp/pioenvs
+libdeps_dir = /tmp/piolibdeps
 
 [env:esp32]
 platform = espressif32
