refactoring. stm32 minimal support

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,19 +9,19 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default =
+;env_default =
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-     due-5500
+;     due-5500
 ;    controllino
 ;    stm32
 
-build_dir = /tmp/pioenvs
-libdeps_dir = /tmp/piolibdeps
+;build_dir = /tmp/pioenvs
+;libdeps_dir = /tmp/piolibdeps
 
 [env:esp32]
 platform = espressif32
@@ -247,35 +247,37 @@ lib_deps =
     https://github.com/livello/PrintEx#is-select-redecl
 
 ;TODO:STM32 compilation problems
-;[env:stm32]
-;platform = ststm32
-;framework = arduino
-;board = nucleo_f103rb
-;upload_protocol = stlink
-;debug_tool = stlink
-;build_flags = !bash check_custom_build_flags_stm32.sh
-;lib_ignore =
-;    DHT sensor library for ESPx
-;    DmxDue
-;    DueFlashStorage
-;    ESP-Dmx
-;    WifiManager
-;    FastLED
-;    Ethernet
-;lib_deps =
+[env:stm32]
+platform = ststm32
+framework = arduino
+board = nucleo_f103rb
+upload_protocol = stlink
+debug_tool = stlink
+build_flags = !bash check_custom_build_flags_stm32.sh
+lib_ignore =
+    DHT sensor library for ESPx
+    DmxDue
+    DueFlashStorage
+    ESP-Dmx
+    WifiManager
+    FastLED
+    Ethernet
+    https://github.com/anklimov/Ethernet
+    DMXSerial
+    DmxSimple
+    httpClient
+    SD
+    PrintEx
+    Ethernet2
+    Artnet
+
+
+lib_deps =
 ;    DallasTemperature
-;    https://github.com/anklimov/aJson
-;    https://github.com/anklimov/CmdArduino
-;    ArduinoHttpClient
-;    https://github.com/anklimov/ModbusMaster
-;;    https://github.com/Serasidis/Ethernet_STM.git
-;;    https://github.com/livello/Ethernet_STM.git
-;    https://github.com/knolleary/pubsubclient.git
-;    Adafruit Unified Sensor
-;    DHT sensor library
-;;    https://github.com/anklimov/DMXSerial
-;;    Syslog
-;;    https://github.com/No3x/Syslog.git
-;    https://github.com/arcao/Syslog.git
-;;    UIPEthernet
-;    Streaming
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    ArduinoHttpClient
+    https://github.com/knolleary/pubsubclient.git
+    Adafruit Unified Sensor
+    DHT sensor library
+    Streaming
