--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,12 @@
 src_dir = lighthub
 env_default =
 ;    megaatmega2560
-    megaatmega2560-net
+;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;     due-5500
+     due-5500
 ;    controllino
 ;    stm32
 
