--- a/platformio.ini
+++ b/platformio.ini
@@ -15,13 +15,13 @@ env_default =
 ;    due
 ;    esp8266
 ;    esp32
-;    megaatmega2560-5500
-     due-5500
+    megaatmega2560-5500
+;     due-5500
 ;    controllino
 ;    stm32
 
-;build_dir = /tmp/pioenvs
-;libdeps_dir = /tmp/piolibdeps
+build_dir = /tmp/pioenvs
+libdeps_dir = /tmp/piolibdeps
 
 [env:esp32]
 platform = espressif32
@@ -108,6 +108,37 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
     https://github.com/anklimov/Ethernet
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    EEPROM
+    Adafruit Unified Sensor
+    DHT sensor library
+    https://github.com/arcao/Syslog.git
+    Streaming
+
+[env:megaatmega2560-5500]
+platform = atmelavr
+board = megaatmega2560
+;upload_port = net:192.168.88.31:23
+framework = arduino
+build_flags = !bash check_custom_build_flags_mega2560-5500.sh
+lib_ignore =
+    DHT sensor library for ESPx
+    DmxDue
+    DueFlashStorage
+    WifiManager
+    Ethernet
+lib_deps =
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/DmxSimple
+    https://github.com/anklimov/httpClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/DMXSerial
+    https://github.com/anklimov/Ethernet2
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED
