Beginning to add homie convention compatibility https://homieiot.github.io/specification/

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,24 +9,29 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default =
+env_default = due-5500
+;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-     due-5500
+;     due-5500
 ;    controllino
 ;    stm32
+;     esp32-evb
 
 ;build_dir = /tmp/pioenvs
 ;libdeps_dir = /tmp/piolibdeps
 
-[env:esp32]
+
+[env:esp32-evb]
 platform = espressif32
 framework = arduino
-board = pico32
+board = esp32-evb
+upload_protocol = esptool
+upload_speed = 115200
 build_flags = !bash check_custom_build_flags_esp32.sh
 lib_ignore =
     DmxSimple
@@ -35,13 +40,51 @@ lib_ignore =
     DueFlashStorage
     SD
     SdFat
-    httpClient
     WifiManager
     Ethernet
+    Ethernet2
+    httpClient
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
     Ethernet3
+    ESP8266HTTPClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/knolleary/pubsubclient.git
+    https://github.com/anklimov/Artnet.git
+    FastLED
+    Adafruit Unified Sensor
+    DHT sensor library for ESPx
+    DHT sensor library
+    Streaming
+    https://github.com/livello/PrintEx#is-select-redecl
+
+
+[env:esp32]
+platform = espressif32
+framework = arduino
+board = pico32
+upload_speed = 115200
+build_flags = !bash check_custom_build_flags_esp32.sh
+lib_ignore =
+    DmxSimple
+    DMXSerial
+    DmxDue
+    DueFlashStorage
+    SD
+    SdFat
+    WifiManager
+    Ethernet
+    Ethernet2
+    HTTPClient
+    httpClient
+lib_deps =
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    Ethernet3
+    ESP8266HTTPClient
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
@@ -66,6 +109,7 @@ lib_ignore =
     httpClient
     ESPDMX
     WifiManager
+    Ethernet3
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -98,6 +142,8 @@ lib_ignore =
     DmxDue
     DueFlashStorage
     WifiManager
+    Ethernet3
+    HTTPClient
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -130,6 +176,7 @@ lib_ignore =
     SD
     SdFat
     httpClient
+    Ethernet3
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -160,6 +207,8 @@ lib_ignore =
     DueFlashStorage
     ESP-Dmx
     WifiManager
+    Ethernet3
+    Ethernet2
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -194,6 +243,7 @@ lib_ignore =
     DmxSimple
     httpClient
     Ethernet
+    Ethernet3
 
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
@@ -227,6 +277,8 @@ lib_ignore =
     DueFlashStorage
     ESP-Dmx
     WifiManager
+    Ethernet3
+    Ethernet2
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -269,6 +321,7 @@ lib_ignore =
     PrintEx
     Ethernet2
     Artnet
+    Ethernet3
 
 
 lib_deps =
