--- a/platformio.ini
+++ b/platformio.ini
@@ -13,15 +13,15 @@ env_default =
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
-;    esp8266
+    esp8266
 ;    esp32
-    megaatmega2560-5500
+;    megaatmega2560-5500
 ;     due-5500
 ;    controllino
 ;    stm32
 
-build_dir = /tmp/pioenvs
-libdeps_dir = /tmp/piolibdeps
+;build_dir = /tmp/pioenvs
+;libdeps_dir = /tmp/piolibdeps
 
 [env:esp32]
 platform = espressif32
