MQTT subscribe fix, AnalogIn fix, first attempt to compile for NRF5

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,46 @@ env_default = due-5500
 
 ;build_dir = /tmp/pioenvs
 ;libdeps_dir = /tmp/piolibdeps
+[env:nrf52840_dk]
+platform = nordinrf52
+board = nrf52840_dk
+;upload_protocol = mbed
+;upload_port = /dev/cu.SLAB_USBtoUART
+framework = arduino
+build_flags = !bash check_custom_build_flags_nrf52840.sh
+lib_ignore =
+    DmxSimple
+    DMXSerial
+    DmxDue
+    EEPROM
+    SD
+    SdFat
+    WifiManager
+    Ethernet
+    Ethernet3
+    httpClient
+    FastLED
+    ESPDMX
+    DueFlashStorage
+    PrintEx
+;    Adafruit_Sensor
+lib_deps =
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    Ethernet2
+    ESP8266HTTPClient
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/knolleary/pubsubclient.git
+;    https://github.com/anklimov/Artnet.git
+;    FastLED
+    Adafruit Unified Sensor
+;    DHT sensor library for ESPx
+    DHT sensor library
+    Streaming
+    https://github.com/anklimov/NRFFlashStorage
+;    https://github.com/livello/PrintEx#is-select-redecl
 
 
 [env:esp32-evb]
@@ -44,6 +84,7 @@ lib_ignore =
     Ethernet
     Ethernet2
     httpClient
+    NRFFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -59,7 +100,7 @@ lib_deps =
     DHT sensor library for ESPx
     DHT sensor library
     Streaming
-    https://github.com/livello/PrintEx#is-select-redecl
+  ;  https://github.com/livello/PrintEx#is-select-redecl
 
 
 [env:esp32]
@@ -80,6 +121,7 @@ lib_ignore =
     Ethernet2
     HTTPClient
     httpClient
+    NRFFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -110,6 +152,7 @@ lib_ignore =
     ESPDMX
     WifiManager
     Ethernet3
+    NRFFlashStorage
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -144,6 +187,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     HTTPClient
+    NRFFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -177,6 +221,7 @@ lib_ignore =
     SdFat
     httpClient
     Ethernet3
+    NRFFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -209,6 +254,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     Ethernet2
+    NRFFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -244,6 +290,7 @@ lib_ignore =
     httpClient
     Ethernet
     Ethernet3
+    NRFFlashStorage
 
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
@@ -279,6 +326,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     Ethernet2
+    NRFFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -322,6 +370,7 @@ lib_ignore =
     Ethernet2
     Artnet
     Ethernet3
+    NRFFlashStorage
 
 
 lib_deps =
