--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,12 @@ env_default =
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
-    esp8266
+;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
 ;     due-5500
 ;    controllino
-;    stm32
+    stm32
 
 ;build_dir = /tmp/pioenvs
 ;libdeps_dir = /tmp/piolibdeps
@@ -38,6 +38,7 @@ lib_ignore =
     httpClient
     WifiManager
     Ethernet
+    Ethernet2
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -66,6 +67,7 @@ lib_ignore =
     httpClient
     ESPDMX
     WifiManager
+    Ethernet3
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -98,6 +100,7 @@ lib_ignore =
     DmxDue
     DueFlashStorage
     WifiManager
+    Ethernet3
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -129,6 +132,7 @@ lib_ignore =
     DueFlashStorage
     WifiManager
     Ethernet
+    Ethernet3
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -161,6 +165,7 @@ lib_ignore =
     SD
     SdFat
     httpClient
+    Ethernet3
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -191,6 +196,7 @@ lib_ignore =
     DueFlashStorage
     ESP-Dmx
     WifiManager
+    Ethernet3
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -225,7 +231,7 @@ lib_ignore =
     DmxSimple
     httpClient
     Ethernet
-
+    Ethernet3
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -258,6 +264,7 @@ lib_ignore =
     DueFlashStorage
     ESP-Dmx
     WifiManager
+    Ethernet3
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
