--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,9 @@ env_default =
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;     due-5500
+     due-5500
 ;    controllino
-    stm32
+;    stm32
 
 ;build_dir = /tmp/pioenvs
 ;libdeps_dir = /tmp/piolibdeps
