fix esp32 build

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@ env_default =
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
-;    esp32
+    esp32
 ;    megaatmega2560-5500
-     due-5500
+;     due-5500
 ;    controllino
 ;    stm32
 ;     esp32-evb
@@ -118,14 +118,15 @@ lib_ignore =
     WifiManager
     Ethernet
     Ethernet2
-    HTTPClient
-    httpClient
     NRFFlashStorage
+;    HTTPClient
+;    httpClient
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
     Ethernet3
-    ESP8266HTTPClient
+    #ArduinoHttpClient
+    HttpClient@2.2.0
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
