Improve multiplatform building stuff

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default = due-5500
+env_default = esp32
 ;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
@@ -21,11 +21,12 @@ env_default = due-5500
 ;    controllino
 ;    stm32
 ;     esp32-evb
+;    nrf52840_dk
 
 ;build_dir = /tmp/pioenvs
 ;libdeps_dir = /tmp/piolibdeps
 [env:nrf52840_dk]
-platform = nordinrf52
+platform = nordicnrf52
 board = nrf52840_dk
 ;upload_protocol = mbed
 ;upload_port = /dev/cu.SLAB_USBtoUART
@@ -46,6 +47,9 @@ lib_ignore =
     ESPDMX
     DueFlashStorage
     PrintEx
+    DHT sensor library
+    DHT sensor library for ESPx
+    Adafruit Unified Sensor
 ;    Adafruit_Sensor
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -58,55 +62,19 @@ lib_deps =
     https://github.com/knolleary/pubsubclient.git
 ;    https://github.com/anklimov/Artnet.git
 ;    FastLED
-    Adafruit Unified Sensor
+;    Adafruit Unified Sensor
 ;    DHT sensor library for ESPx
-    DHT sensor library
+;    DHT sensor library
     Streaming
     https://github.com/anklimov/NRFFlashStorage
 ;    https://github.com/livello/PrintEx#is-select-redecl
 
 
-[env:esp32-evb]
-platform = espressif32
-framework = arduino
-board = esp32-evb
-upload_protocol = esptool
-upload_speed = 115200
-build_flags = !bash check_custom_build_flags_esp32.sh
-lib_ignore =
-    DmxSimple
-    DMXSerial
-    DmxDue
-    DueFlashStorage
-    SD
-    SdFat
-    WifiManager
-    Ethernet
-    Ethernet2
-    httpClient
-    NRFFlashStorage
-lib_deps =
-    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-    https://github.com/anklimov/DS2482_OneWire
-    Ethernet3
-    ESP8266HTTPClient
-    https://github.com/anklimov/aJson
-    https://github.com/anklimov/CmdArduino
-    https://github.com/anklimov/ModbusMaster
-    https://github.com/knolleary/pubsubclient.git
-    https://github.com/anklimov/Artnet.git
-    FastLED
-    Adafruit Unified Sensor
-    DHT sensor library for ESPx
-    DHT sensor library
-    Streaming
-  ;  https://github.com/livello/PrintEx#is-select-redecl
-
-
 [env:esp32]
 platform = espressif32
 framework = arduino
-board = pico32
+;board = pico32
+board = esp32-evb
 upload_speed = 115200
 build_flags = !bash check_custom_build_flags_esp32.sh
 lib_ignore =
@@ -116,29 +84,38 @@ lib_ignore =
     DueFlashStorage
     SD
     SdFat
-    WifiManager
     Ethernet
     Ethernet2
+    Ethernet3
     HTTPClient
     httpClient
-    NRFFlashStorage
-lib_deps =
+    EEPROM
+    https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
-    Ethernet3
-    ESP8266HTTPClient
-    https://github.com/anklimov/aJson
-    https://github.com/anklimov/CmdArduino
-    https://github.com/anklimov/ModbusMaster
-    https://github.com/knolleary/pubsubclient.git
+    DS2482_OneWire
+    OneWire
+    DallasTemperature
+    ModbusMaster
+    Artnet
     https://github.com/anklimov/Artnet.git
     FastLED
     Adafruit Unified Sensor
     DHT sensor library for ESPx
     DHT sensor library
+    Wire
+    ;WifiManager
+    ;HTTPClient
+    ;HttpClient
+lib_deps =
+    https://github.com/ebenolson/WIFIMANAGER-ESP32.git
+    https://github.com/zhouhan0126/WebServer-esp32.git
+    https://github.com/arduino-libraries/ArduinoHttpClient.git
+    https://github.com/anklimov/aJson
+    https://github.com/anklimov/CmdArduino
+    https://github.com/knolleary/pubsubclient.git
     Streaming
-    https://github.com/livello/PrintEx#is-select-redecl
-
+    https://github.com/anklimov/NRFFlashStorage
 [env:due]
 platform = atmelsam
 framework = arduino
