fix Mega compilation

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default = esp32
+env_default = megaatmega2560
 ;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
@@ -50,6 +50,7 @@ lib_ignore =
     DHT sensor library
     DHT sensor library for ESPx
     Adafruit Unified Sensor
+    WebServer
 ;    Adafruit_Sensor
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -130,6 +131,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     NRFFlashStorage
+    WebServer
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -165,6 +167,7 @@ lib_ignore =
     Ethernet3
     HTTPClient
     NRFFlashStorage
+    WebServer
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -232,6 +235,7 @@ lib_ignore =
     Ethernet3
     Ethernet2
     NRFFlashStorage
+    WebServer
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -268,6 +272,7 @@ lib_ignore =
     Ethernet
     Ethernet3
     NRFFlashStorage
+    WebServer
 
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
@@ -304,6 +309,7 @@ lib_ignore =
     Ethernet3
     Ethernet2
     NRFFlashStorage
+    WebServer
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -348,6 +354,7 @@ lib_ignore =
     Artnet
     Ethernet3
     NRFFlashStorage
+    WebServer
 
 
 lib_deps =
