MQTT topics config & CallBack refactoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default = megaatmega2560
+env_default = megaatmega2560-net
 ;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
@@ -253,7 +253,6 @@ lib_deps =
     DHT sensor library
     https://github.com/arcao/Syslog.git
     Streaming
-
 
 [env:due-5500]
 platform = atmelsam
