MQTT topics refactoring (sub-properties, set) to better compatibility, modify default topic prefix from /myhome to myhome

--- a/platformio.ini
+++ b/platformio.ini
@@ -100,6 +100,8 @@ lib_ignore =
     ModbusMaster
     Artnet
     https://github.com/anklimov/Artnet.git
+    https://github.com/anklimov/ESP-Dmx
+    HTTPClient
     FastLED
     Adafruit Unified Sensor
     DHT sensor library for ESPx
