--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@ env_default =
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
-    esp32
+;    esp32
 ;    megaatmega2560-5500
-;     due-5500
+     due-5500
 ;    controllino
 ;    stm32
 ;     esp32-evb
