--- a/platformio.ini
+++ b/platformio.ini
@@ -241,7 +241,7 @@ lib_deps =
     Streaming
 
 [env:esp8266]
-platform = espressif8266
+platform = espressif8266@1.8.0
 framework = arduino
 board = nodemcuv2
 build_flags = !bash check_custom_build_flags_esp8266.sh
