ESP8266 build fix

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default = megaatmega2560-net
+env_default = esp8266
 ;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
@@ -202,7 +202,11 @@ lib_ignore =
     SD
     SdFat
     httpClient
+    HTTPClient
+    ArduinoHttpClient
     Ethernet3
+    Ethernet2
+    Ethernet
     NRFFlashStorage
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
