--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ env_default =
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-     due-5500
+;     due-5500
 ;    controllino
 ;    stm32
 ;     esp32-evb
