--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-env_default = esp8266
+;env_default = esp8266
 ;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
@@ -47,11 +47,12 @@ lib_ignore =
     ESPDMX
     DueFlashStorage
     PrintEx
-    DHT sensor library
+    ;DHT sensor library
     DHT sensor library for ESPx
-    Adafruit Unified Sensor
+    ;Adafruit Unified Sensor
     WebServer
-;    Adafruit_Sensor
+    UIPEthernet
+    ;Adafruit_Sensor
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -63,9 +64,9 @@ lib_deps =
     https://github.com/knolleary/pubsubclient.git
 ;    https://github.com/anklimov/Artnet.git
 ;    FastLED
-;    Adafruit Unified Sensor
+    Adafruit Unified Sensor
 ;    DHT sensor library for ESPx
-;    DHT sensor library
+    DHT sensor library
     Streaming
     https://github.com/anklimov/NRFFlashStorage
 ;    https://github.com/livello/PrintEx#is-select-redecl
@@ -107,6 +108,7 @@ lib_ignore =
     DHT sensor library for ESPx
     DHT sensor library
     Wire
+    UIPEthernet
     ;WifiManager
     ;HTTPClient
     ;HttpClient
@@ -134,6 +136,7 @@ lib_ignore =
     Ethernet3
     NRFFlashStorage
     WebServer
+    UIPEthernet
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -170,6 +173,7 @@ lib_ignore =
     HTTPClient
     NRFFlashStorage
     WebServer
+    UIPEthernet
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -208,6 +212,7 @@ lib_ignore =
     Ethernet2
     Ethernet
     NRFFlashStorage
+    UIPEthernet
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -242,6 +247,7 @@ lib_ignore =
     Ethernet2
     NRFFlashStorage
     WebServer
+    UIPEthernet
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -278,7 +284,7 @@ lib_ignore =
     Ethernet3
     NRFFlashStorage
     WebServer
-
+    UIPEthernet
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -315,6 +321,7 @@ lib_ignore =
     Ethernet2
     NRFFlashStorage
     WebServer
+    UIPEthernet
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -361,7 +368,6 @@ lib_ignore =
     NRFFlashStorage
     WebServer
 
-
 lib_deps =
 ;    DallasTemperature
     https://github.com/anklimov/aJson
@@ -371,3 +377,5 @@ lib_deps =
     Adafruit Unified Sensor
     DHT sensor library
     Streaming
+    UIPEthernet
+    EEPROM
